[package]
name = "gst-plugin-audiovisualizers"
version.workspace = true
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
repository.workspace = true
license = "MPL-2.0"
description = "GStreamer Rust Audio Visualizers Plugin"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gst = { workspace = true, features = ["v1_20"] }
gst-base = { workspace = true, features = ["v1_20"] }
gst-audio = { workspace = true, features = ["v1_20"] }
gst-video = { workspace = true, features = ["v1_20"] }
gst-pbutils = { workspace = true, features = ["v1_20"] }
byte-slice-cast = "1"
spectrum-analyzer = "1.7"

[lib]
name = "gstrsaudiovisualizers"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-pbutils-1.0, gstreamer-audio-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
