[package]
name = "gst-plugin-chafa"
version.workspace = true
authors = ["Jordan Yelloz <jordan@yelloz.me>"]
repository.workspace = true
license = "MPL-2.0"
edition.workspace = true
rust-version.workspace = true
description = "Chafa terminal graphics sink"

[dependencies]
gst = { workspace = true }
gst-base.workspace = true
gst-video.workspace = true
chafa = "0.1.1"
anes = "0.2.0"

[lib]
name = "gstchafa"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
default = []
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, chafa, gobject-2.0, glib-2.0"
